@@ -104,7 +104,8 @@ IN DEVELOPMENT
       (#4047, #48914, James Henstridge, John Arbash Meinel)
 
     * New command line option '--profile-imports', which will install a custom
-      importer to log time to import modules to sys.stderr (John Arbash Meinel)
+      importer to log time to import modules and regex compilation time to 
+      sys.stderr (John Arbash Meinel)
 
 bzr 0.8.2  2006-05-17
   
